[package]
name = "switchr"
version = "0.1.0"
edition = "2024"

[dependencies]
moka = { version = "0.12.11" , features = ["sync"]}
hex = "0.4.3"
# tappers = { version = "0.4.2", optional = true, features = ["tokio"] }
tokio = { version = "1.48.0", optional = true }
tokio-tun = { version = "0.15.0", optional = true }

[features]
default = ["tap"]
tap = ["tokio", "tokio-tun"]